# tailscale-magic

./: README.md  pyproject.toml
ts_funnel/: __init__.py  allowlist.py  cli.py  funnel.py  scanner.py
